--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,3 +1,25 @@
 video {
-	max-width: 100%;
+	position: absolute;
+	overflow: hidden;
+	width: 100%;
+	top: 50%;
+	left: 50%;
+	min-width: 100%;
+	min-height: 100%;
+	width: auto;
+	height: auto;
+	z-index: -1;
+	-ms-transform: translateX(-50%) translateY(-50%);
+	-moz-transform: translateX(-50%) translateY(-50%);
+	-webkit-transform: translateX(-50%) translateY(-50%);
+	transform: translateX(-50%) translateY(-50%);
+	// opacity: 0.6;
+}
+
+header {
+	position: relative;
+	height: 50vh;
+	min-height: 25rem;
+	width: 100%;
+	overflow: hidden;
 }
