--- a/src/components/filters/filters.scss
+++ b/src/components/filters/filters.scss
@@ -1,5 +1,27 @@
 @import '../../App.scss';
 
 .filters-container {
+	background-color: #f7f7f7;
+	padding: 20px;
+}
+
+.filters-box {
+	background-color: #fff;
+	padding: 10px;
+	margin: 80px 0;
+}
+
+.filters-box form {
 	background-color: $accent-color;
+	padding: 20px;
+}
+
+.filters-box input, .filters-box select {
+	margin-bottom: 10px;
+	border-radius: 0px;
+}
+
+.filters-box form button {
+	background-color: $secondary-color;
+	width: 100%;
 }
