--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,3 +1,5 @@
+@import '../../App.scss';
+
 video {
 	position: absolute;
 	overflow: hidden;
@@ -22,4 +24,46 @@ header {
 	min-height: 25rem;
 	width: 100%;
 	overflow: hidden;
+}
+
+.headerText {
+	width: 100%;
+	margin: 0 auto;
+	display: inline-flex;
+	margin-top: 4em;
+}
+
+.headerText-left {
+	text-align: right;
+}
+
+.headerText-left h1 {
+	color: $accent-color;
+	font-size: 3em;
+}
+
+.headerText-left p {
+	color: $accent-color;
+}
+
+.headerText-right {
+	background-color: $green;
+	width: 220px;
+	height: 220px;
+	padding: 10px;
+	text-align: center;
+}
+
+.headerText-right h3 {
+	color: $lightgreen;
+}
+
+
+.headerText-right hr {
+	max-width: 30%;
+	color: $lightgreen;
+}
+
+.headerText-right p {
+	color: #fff;
 }
