--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -1,9 +1,18 @@
 @import '../../App.scss';
 
+.navbarTop {
+	background-color: $secondary-color;
+}
 .navbar {
 	background-color: $secondary-color !important;
 }
 
 .navbar-dark .navbar-nav .nav-link {
 	color: #fff;
+}
+
+.logo {
+	// width: 13px;
+	// margin-top: -40px;
+	// // margin-bottom: -12px;
 }
