Fix graph area white borders

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -21,7 +21,7 @@ video {
 header {
 	position: relative;
 	height: 50vh;
-	min-height: 25rem;
+	// min-height: 25rem;
 	width: 100%;
 	overflow: hidden;
 }
