--- a/src/components/filters/filters.scss
+++ b/src/components/filters/filters.scss
@@ -1,15 +1,19 @@
 @import '../../App.scss';
 
-.filters-container {
+#filters-container {
 	background-color: #f7f7f7;
-	padding: 20px;
 	margin: 0 auto;
+}
+
+#graphArea {
+	background-color: #fff;
 }
 
 .filters-box {
 	background-color: #fff;
-	padding: 10px;
-	margin: 80px 0;
+	margin-bottom: 15px;
+	padding: 15px;
+	margin-top: 20px;
 }
 
 .filters-box form {
@@ -25,4 +29,5 @@
 .filters-box form button {
 	background-color: $secondary-color;
 	width: 100%;
+	border-radius: 0;
 }
