Fix navbar colors and add header text for AQI

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,8 @@
+$primary-color: #f7f7f7;
 $secondary-color: #224651;
-$tertiary-color: #b2d3b4;
 $accent-color: #E6F4E7;
+$tertiary-color: #b2d3b4;
+
 $green: #93B79B;
 $lightgreen: #627b66;
 
