--- a/src/components/contactus/contactus.scss
+++ b/src/components/contactus/contactus.scss
@@ -7,11 +7,11 @@
     padding: 5%;
     width: fit-content;
     height: fit-content;
-    position: absolute;
     top: 20%;
     left: 30%;
     right: 30%;
     bottom: 20%;
+    margin: 80px auto;
 }
 
 .mt-1
