Add logo to navbar

--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -12,10 +12,10 @@
 	color: #fff;
 }
 
-// .logo {
-// 	width: 13px;
-// 	margin: 0;
-// }
+.logo img {
+	height: 60px;
+	margin: 5px 0;
+}
 
 .navbar a {
 	color: #fff;
