--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -25,8 +25,17 @@
 	font-weight: bold;
 }
 
+#responsive-navbar-nav {
+	justify-content: flex-end;
+}
+
 @media only screen and (max-width: 920px) {
 	.navbar a {
 		padding: 15px 0;
+	}
+
+	.navbarTop .col-4 {
+		width: 100%;
+		max-width: 100%;
 	}
 }
