--- a/src/components/iauratabs/iauratabs.scss
+++ b/src/components/iauratabs/iauratabs.scss
@@ -12,12 +12,12 @@
     margin: 0;
     font-size: 0.8em;
     font-weight: bold;
-    color: $background3-color;
+    color: $secondary-color;
 }   
 
 .teamCol
 {
-    border: 1px solid $background2-color;
+    border: 1px solid $secondary-color;
     padding: 5px;
 }
 
