--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -3,6 +3,7 @@
 footer {
 	background-color: $secondary-color;
 	padding: 5px 0;
+	text-align: center;
 }
 
 footer p {
@@ -12,4 +13,13 @@ footer p {
 	margin: 0;
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 0.8em;
+}
+
+footer a {
+	color: #fff;
+}
+
+footer a:hover {
+	text-decoration: none;
+	color: $accent-color;
 }
