--- a/src/components/dashboard/dashboard.scss
+++ b/src/components/dashboard/dashboard.scss
@@ -29,16 +29,16 @@
 	width: 80px;
 }
 
-.dashboard-box p ul {
+#dashboard-traveltime {
+	font-size: 24px;
+	margin: 2.5em 2em;
+}
+
+.dashboard-items ul {
 	list-style-type: none;
 	padding: 20px;
 }
 
-.dashboard-box p ul li {
-	padding: 10px;
-}
-
-#dashboard-traveltime {
-	font-size: 24px;
-	margin: 2.5em 2em;
+.dashboard-items ul li {
+	padding: 10px 0;
 }
