--- a/src/components/iaurahead/iaurahead.scss
+++ b/src/components/iaurahead/iaurahead.scss
@@ -1,16 +1,12 @@
 @import '../../App.scss';
 
-.heading1
-{
+.heading1 {
     color: $secondary-color;
     font-size: 1.5rem;
     margin-top: 4%;
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.para
-{
+.para {
     margin: 0;
 }
-
-
