--- a/src/components/team/team.scss
+++ b/src/components/team/team.scss
@@ -43,13 +43,11 @@ hr {
     margin-bottom: 0;
 }
 
-h7 {
-    font-style: italic;
-    color: $secondary-color;
-    font-size: 15px;
-}
-
 .teamCol img {
     object-fit: cover;
     object-position: top;
+}
+
+#ekspecific {
+    margin-top: 5px;
 }
